--- a/website-source/nlp_exec_summary.qmd
+++ b/website-source/nlp_exec_summary.qmd
@@ -21,22 +21,23 @@ Reddit's MovieSuggestions subreddit is a lively place where movie buffs share th
 Instead of just counting how many thumbs up or stars a movie gets, a deeper look into Rotten Tomatoes reviews was taken to really understand how people feel about these movies. The goal was to figure out the general mood of the reviews — are people happy or unhappy with the movie? From this, a new kind of movie rating was made that doesn't just look at how many people liked the movie, but also how strongly they felt about it.
 
 ```{=html}
-<table style="width: 100%; border: none;">
-  <tr style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <img src="img/top_suggested_movies.png" style="width: 100%;">
-      <figcaption style="text-align: center;">Figure-1 (a)</figcaption>
-  </tr>
-  <tr style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <img src="img/review_rating_of_top_movies.png" style="width: 100%;">
-      <figcaption style="text-align: center;">Figure-1 (b)</figcaption>
-  </tr>
-  <tr>
-    <td colspan="2" style="text-align: center; border: none;">
-      <figcaption style="text-align: center;">Figure-1: Comparative Visualization of Top 10 Suggested Movies on Reddit - 1(a) shows the list of movies while the 1(b) depicts their review ratings</figcaption>
-    </td>
-  </tr>
-</table>
+
+<div style="display: flex; align-items: flex-end;">
+  <div style="flex: 1; text-align: center;">
+    <img src="img/top_suggested_movies.png" style="width: 100%;">
+    <p style="text-align: center;">Figure-1 (a)</p>
+  </div>
+  <div style="flex: 1; text-align: center;">
+    <img src="img/review_rating_of_top_movies.png" style="width: 100%;">
+    <p style="text-align: center;">Figure-1 (b)</p>
+  </div>
+</div>
+
+<figcaption style="text-align: center;">Figure-1: Comparative Visualization of Top 10 Suggested Movies on Reddit - 1(a) shows the list of movies while the 1(b) depicts their review ratings</figcaption>
+
 ```
+<br>
+
 ##### Insights
 
 The study found out that the movies people talk about on Reddit aren't always the ones with the highest scores from professional reviewers. Movies that get people talking, like "Hereditary," seem to hold a special place in Reddit users' hearts. It shows that on Reddit, what really matters is how much a movie gets people to talk and think, and how it connects with them on a personal level.
@@ -60,22 +61,20 @@ The top ten anime picks on Reddit were showed in a graphic that looked like a ta
 An interesting trend emerged: the anime that were most popular didn't always line up with the ones that got the best reviews. This showed that what people watch and talk about isn't just about how good critics say it is. It's also about what stories grab them, which characters they can't forget, and how the anime fits into the culture at large.
 
 ```{=html}
-<table style="width: 100%; border: none;">
-  <tr style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <img src="img/top_anime_suggested.png" style="width: 100%;">
-      <figcaption style="text-align: center;">Figure-2 (a)</figcaption>
-  </tr>
-  <tr style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <img src="img/review_rating_of_top_anime.png" style="width: 100%;">
-      <figcaption style="text-align: center;">Figure-2 (b)</figcaption>
-  </tr>
-  <tr>
-    <td colspan="2" style="text-align: center; border: none;">
-      <figcaption style="text-align: center;">Figure-2: Comparative Visualization of Top 10 Suggested Anime on Reddit - 2(a) shows the list of anime while the 2(b) depicts their review ratings</figcaption>
-    </td>
-  </tr>
-</table>
+<div style="display: flex; align-items: flex-end;">
+  <div style="flex: 1; text-align: center;">
+    <img src="img/top_anime_suggested.png" style="width: 100%;">
+    <p style="text-align: center;">Figure-2 (a)</p>
+  </div>
+  <div style="flex: 1; text-align: center;">
+    <img src="img/review_rating_of_top_anime.png" style="width: 100%;">
+    <p style="text-align: center;">Figure-2 (b)</p>
+  </div>
+</div>
+
+<figcaption style="text-align: center;">Figure-2: Comparative Visualization of Top 10 Suggested Anime on Reddit - 2(a) shows the list of anime while the 2(b) depicts their review ratings</figcaption>
 ```
+<br>
 
 ##### Insights
 
