--- a/website-source/eda_exec_summary.qmd
+++ b/website-source/eda_exec_summary.qmd
@@ -2,7 +2,7 @@
 title: "Exploratory Data Analysis - Executive Summary"
 format:
   html:
-    toc: true
+    toc: false
     page-layout: full
 ---
 
